src/snapshots/mend__tests__cli_fails_loading_.snap
---
source: src/main.rs
expression: "format!(\"{:#}\", result.err().unwrap())"
---
Could not read file `mend.toml`: No such file or directory (os error 2)
