src/snapshots/mend__tests__cli_fails_loading_default_file.snap
---
source: src/main.rs
expression: "format!(\"{:#}\", result.err().unwrap())"
---
No mend.toml found, please specify one with -f or create one with `mend init`
