src/snapshots/mend__tests__cli_fails_loading_missing_include.snap
---
source: src/main.rs
expression: "strip_manifest_path_from_text(format!(\"{:#}\", result.err().unwrap()))"
---
Could not read include file `not-there.toml` included from `<MANIFEST_DIR>/tests/data/missing-include.toml`: No such file or directory (os error 2)
