src/snapshots/mend__tests__cli_fails_loading_specified_file.snap
---
source: src/main.rs
expression: "format!(\"{:#}\", result.err().unwrap())"
---
Specified file /Users/rmyers/dev/mend/tests/data/not-there.toml doesn't exist
