src/snapshots/mend__tests__it_works.snap
---
source: src/main.rs
expression: "loaded.expect(\"Failed loading\")"
---
from:
  sha: 43a3a253
include: []
env:
  DEFAULT_FILe: main.c
  JAVA_HOME: /Library/Java/JavaVirtualMachines/graalvm-jdk-20.0.2+9.1/Contents/Home/
  PATH: "$PATH:/Users/rmyers/dev/untangler/build/install/untangler/bin"
recipes:
  format:
    run: clang-format -i $DEFAULT_FILE
    commit_template: d - Format
    tag: ~
    tags:
      - binary_identical
  move_includes_to_top:
    run: "    grep \"^#include\" $DEFAULT_FILE > a.tmp && grep -v \"^#include\" $DEFAULT_FILE >> a.tmp && mv a.tmp $DEFAULT_FILE'\n  "
    commit_template: r - Move includes to top
    tag: ~
    tags:
      - binary_identical
  remove_comments:
    run: "    untangler remove comment \"*\" --sub=\" \" -w\n  "
    commit_template: d - Remove comments
    tag: ~
    tags:
      - binary_identical
  remove_comments_in_includes:
    run: "    perl -pi -e ''s{^#include */\\*((?!\\*/).)*\\*/}{#include}gs'' $DEFAULT_FILE\n  "
    commit_template: d - Remove comments in includes
    tag: ~
    tags:
      - binary_identical
  rename:
    run: untangler rename $1 $2 -w -f $DEFAULT_FILE
    commit_template: R - Rename $1 to $2
    tag: ~
    tags: []
  split_declarations:
    run: "    untangler misc split-declaration \"*\" -w\n  "
    commit_template: r - Split declarations
    tag: ~
    tags:
      - binary_identical
hooks:
  after_step:
    run: ~
    run_for_tag:
      tag: binary_identical
      run: diff a.out a.out.bak
      else_run: make test
  before_step:
    run: ~
    run_for_tag:
      tag: binary_identical
      run: make && cp a.out a.bak
      else_run: make
steps:
  - remove_comments_in_includes
  - remove_comments
  - format
  - move_includes_to_top
  - split_declarations
  - rename B calculate_value
  - rename b evaluate_and_draw_interval
  - rename X control_points
  - rename P point_value
  - rename O offset
  - rename m pixel_index
  - rename k color_value
  - rename S screen_buffer

